@@ -1,0 +1,17 @@
+\name{getReaders}
+\alias{getReaders}
+\title{Get available readers}
+\description{
+  Get available readers.
+}
+\usage{
+getReaders()
+}
+\value{
+  A character vector with available readers.
+}
+\author{Ingo Feinerer}
+\examples{
+getReaders()
+}
+\keyword{file}
